featv(openapi): test media modual
